--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@tailwindcss/forms": "^0.5.2",
     "@trpc/client": "^9.27.1",
     "@trpc/next": "^9.27.1",
     "@trpc/react": "^9.27.1",
     "@trpc/server": "^9.27.1",
     "next": "12.2.5",
+    "next-plausible": "^3.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.2",
