--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@trpc/next": "^9.27.1",
     "@trpc/react": "^9.27.1",
     "@trpc/server": "^9.27.1",
+    "crypto-random-string": "^5.0.0",
     "next": "12.2.5",
     "next-plausible": "^3.2.0",
     "react": "18.2.0",
