--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "1.0.0-beta.1",
     "@headlessui/react": "^1.6.6",
     "@tailwindcss/forms": "^0.5.2",
     "@trpc/client": "^9.27.1",
@@ -22,12 +23,14 @@
     "react-dom": "18.2.0",
     "react-query": "3.39.2",
     "superjson": "^1.9.1",
+    "uuid": "^8.3.2",
     "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.8",
@@ -36,6 +39,7 @@
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "react-icons": "^4.4.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   },
