--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@formkit/auto-animate": "1.0.0-beta.1",
     "@headlessui/react": "^1.6.6",
     "@tailwindcss/forms": "^0.5.2",
+    "@tippyjs/react": "^4.2.6",
     "@trpc/client": "^9.27.1",
     "@trpc/next": "^9.27.1",
     "@trpc/react": "^9.27.1",
