--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@trpc/next": "^9.27.1",
     "@trpc/react": "^9.27.1",
     "@trpc/server": "^9.27.1",
-    "crypto-random-string": "^5.0.0",
     "next": "12.2.5",
     "next-plausible": "^3.2.0",
     "react": "18.2.0",
@@ -25,7 +24,8 @@
     "react-query": "3.39.2",
     "superjson": "^1.9.1",
     "uuid": "^8.3.2",
-    "zod": "^3.18.0"
+    "zod": "^3.18.0",
+    "crypto-random-string": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
@@ -34,12 +34,12 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
     "react-icons": "^4.4.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
