--- a/package.json
+++ b/package.json
@@ -12,20 +12,13 @@
     "@formkit/auto-animate": "1.0.0-beta.1",
     "@headlessui/react": "^1.6.6",
     "@tailwindcss/forms": "^0.5.2",
-    "@tippyjs/react": "^4.2.6",
-    "@trpc/client": "^9.27.1",
-    "@trpc/next": "^9.27.1",
-    "@trpc/react": "^9.27.1",
-    "@trpc/server": "^9.27.1",
     "crypto-random-string": "^5.0.0",
     "next": "12.2.5",
     "next-plausible": "^3.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "3.39.2",
-    "superjson": "^1.9.1",
-    "uuid": "^8.3.2",
-    "zod": "^3.18.0"
+    "react-feather": "^2.0.10",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
@@ -37,12 +30,11 @@
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "flowbite": "^1.5.2",
+    "flowbite-react": "^0.1.10",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "flowbite": "^1.5.2",
-    "flowbite-react": "^0.1.10",
-    "react-icons": "^4.4.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   },
