--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "n4-random",
-  "version": "0.1.0",
+  "name": "rsg-ui",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
