--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,5 @@
     "project": "./tsconfig.json"
   },
   "plugins": ["@typescript-eslint"],
-  "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended"],
-  "rules": {
-    "@typescript-eslint/no-explicit-any": ["off"]
-  }
+  "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended"]
 }
