--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "@next/font": "^13.0.3",
     "clsx": "^1.2.1",
     "crypto-random-string": "^5.0.0",
     "next": "13.0.3",
