--- a/package.json
+++ b/package.json
@@ -9,31 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.4",
+    "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
-    "@next/font": "^13.0.3",
+    "@next/font": "^13.1.1",
+    "@radix-ui/react-slider": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.0.2",
     "clsx": "^1.2.1",
     "crypto-random-string": "^5.0.0",
-    "next": "13.0.3",
+    "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "uuid": "^8.3.2"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "16.18.1",
+    "@types/node": "18.11.18",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "autoprefixer": "^10.4.13",
     "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
+    "eslint-config-next": "13.1.1",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.3"
+    "typescript": "^4.9.4"
   },
   "ct3aMetadata": {
     "initVersion": "5.8.1"
