--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port=1337",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port=1337",
     "lint": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
-    "@next/font": "^13.1.1",
+    "@next/font": "^13.1.2",
     "@radix-ui/react-slider": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.2",
-    "clsx": "^1.2.1",
+    "@vercel/analytics": "^0.1.8",
     "crypto-random-string": "^5.0.0",
-    "next": "13.1.1",
+    "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -27,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "autoprefixer": "^10.4.13",
+    "clsx": "^1.2.1",
     "eslint": "8.27.0",
     "eslint-config-next": "13.1.1",
     "postcss": "^8.4.19",
